argocd/argo-rollouts/installation/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: egshared
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: default-shared
  namespace: envoy-gateway-system
spec:
  gatewayClassName: egshared
  listeners:
    - name: http
      protocol: HTTP
      port: 8090
      allowedRoutes:
        namespaces:
          from: All
