argocd/argo-rollouts/installation/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rolouts-httproute
  namespace: argo-rollouts
spec:
  parentRefs:
    - name: default-shared
      namespace: envoy-gateway-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ar-argo-rollouts-dashboard
          port: 3100
          weight: 1
